[package]
name = "interceptor-tls"
version = "0.1.0"
authors = ["flo <eridio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.38", features = ["v110"] }
actix-web = { version = "4", features = ["openssl"] }
reqwest ="*"
actix= "*"
env_logger= "0.9.0"
futures= "0.3.21"
hudsucker= {version = "0.16.1", features = ["openssl-certs"]}
tracing = { version = "0.1.21", features = ["log"] }
time = { version = "0.3.1", optional = true }
tokio = { version = "1.6.1", features = ["macros","io-util", "rt","rt-multi-thread"] }
tokio-rustls = "0.23.0"
tokio-tungstenite = { version = "0.17.0", features = ["rustls-tls-webpki-roots"] }
tracing-subscriber= "0.3.9"